<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clint.owm_client.WeatherActivity">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/searchNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_name_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/countryCodeText" />
    <EditText
        android:id="@+id/countryCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country_code_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:maxLength="2"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="search"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/currentIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/locationText"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/currentTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/currentIcon"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/currentHighText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_alignEnd="@+id/anchor"
        android:layout_below="@+id/currentTempText" />
    <TextView
        android:id="@+id/currentLowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_alignStart="@+id/anchor"
        android:layout_below="@+id/currentTempText" />
    <TextView
        android:id="@+id/conditionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/currentHighText"
        android:layout_centerHorizontal="true" />
    <View android:id="@+id/separator"
        android:background="@color/white"
        android:visibility="invisible"
        android:layout_width = "fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="4dp"
        android:layout_below="@+id/conditionText" />
    <LinearLayout
        android:id="@+id/dayOneLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_marginEnd="86dp"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/anchor"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dayOneDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/dayOneIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/dayOneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dayTwoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dayTwoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/dayTwoIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/dayTwoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dayThreeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_alignStart="@+id/anchor"
        android:layout_marginStart="86dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dayThreeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/dayThreeIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/dayThreeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dayFourLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/anchor"
        android:layout_below="@+id/dayTwoLayout"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dayFourDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/dayFourIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/dayFourText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dayFiveLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/anchor"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/dayTwoLayout"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dayFiveDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:id="@+id/dayFiveIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/dayFiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
        </RelativeLayout>

